# cpp_notes

./: CMakeLists.txt  calling_conventions.txt  cmake_notes.txt  run.bat
src/: Cast.hpp  Singleton.hpp  Visitor.hpp  main.cpp
